--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<!-- saved from url=(0031)http://daniellinssen.net/hello/ -->
+ <!--saved from url=(0031)http://daniellinssen.net/hello/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 	<style>
@@ -73,19 +73,19 @@
 	</style>
 
 	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	//   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	//   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	//   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	//   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-	  ga('create', 'UA-52932237-3', 'auto');
-	  ga('send', 'pageview');
+	//   ga('create', 'UA-52932237-3', 'auto');
+	//   ga('send', 'pageview');
 
 	</script>
 
 	<link rel="icon" type="image/png" href="images/favicon.png">
 
-	<title>Daniel Linssen</title>
+	<title>Joshua Jumbles</title>
 
 
 
@@ -100,20 +100,20 @@
 </div>
 <div class="links">
 	<a class="but" href="http://twitter.com/managore">
-	  	<img class="bottom" src="images/games-A.png">
-	  	<img class="top"    src="images/games-B.png">
+	  	<img class="bottom" src="Images/games-A.png">
+	  	<img class="top"    src="Images/games-B.png">
 	</a>
 	<a class="but" href="https://joshuajumbles.itch.io/">
-	  	<img class="bottom" src="images/games-A.png">
-	  	<img class="top"    src="images/games-B.png">
+	  	<img class="bottom" src="Images/games-A.png">
+	  	<img class="top"    src="Images/games-B.png">
 	</a>
 	<a class="but" href="https://managore.tumblr.com/">
-	  	<img class="bottom" src="images/games-A.png">
-	  	<img class="top"    src="images/games-B.png">
+	  	<img class="bottom" src="Images/games-A.png">
+	  	<img class="top"    src="Images/games-B.png">
 	</a>
 	<a class="but" href="https://managore.tumblr.com/">
-	  	<img class="bottom" src="images/games-A.png">
-	  	<img class="top"    src="images/games-B.png">
+	  	<img class="bottom" src="Images/games-A.png">
+	  	<img class="top"    src="Images/games-B.png">
 	</a>
 </div>
 
