One more missing link. Fixed title.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 	</script>
 
-	<link rel="icon" type="image/png" href="images/favicon.png">
+	<link rel="icon" type="image/png" href="Images/favicon.png">
 
 	<title>Joshua Jumbles</title>
 
@@ -96,7 +96,7 @@
 <body>
 
 <div id="logo">
-	<img src="images/header.png">
+	<img src="Images/header.png">
 </div>
 <div class="links">
 	<a class="but" href="http://twitter.com/managore">
