Early version artwork. Links fixed.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<style>
 
 		body {
-			background-color:#ccb4d6;
+			background-color:#b7aabc;
 			margin:0;
 		}
 
@@ -122,25 +122,25 @@
 	<img src="Images/headerWideTest.png">
 </div>
 <div class="links">
-	<a class="but" href="http://twitter.com/joshuajumbles">
-	  	<img class="bottom" src="Images/gamesButtonOn.png">
-	  	<img class="top"    src="Images/gamesButtonOff.png">
-	</a>
 	<a class="but" href="https://joshuajumbles.itch.io/">
-	  	<img class="bottom" src="Images/gamesButtonOn.png">
-	  	<img class="top"    src="Images/gamesButtonOff.png">
+	  	<img class="bottom" src="Images/Button_GamesOn.png">
+	  	<img class="top"    src="Images/Button_GamesOff.png">
 	</a>
-	<a class="but" href="https://managore.tumblr.com/">
-	  	<img class="bottom" src="Images/gamesButtonOn.png">
-	  	<img class="top"    src="Images/gamesButtonOff.png">
+	<a class="but" href="https://www.youtube.com/channel/UC-ZGkangM4NekvKyBFU1Cvw">
+	  	<img class="bottom" src="Images/Button_VidsOn.png">
+	  	<img class="top"    src="Images/Button_VidsOff.png">
 	</a>
-	<a class="but" href="https://managore.tumblr.com/">
-	  	<img class="bottom" src="Images/gamesButtonOn.png">
-	  	<img class="top"    src="Images/gamesButtonOff.png">
+	<a class="but" href="http://twitter.com/joshuajumbles">
+	  	<img class="bottom" src="Images/Button_TwitsOn.png">
+	  	<img class="top"    src="Images/Button_TwitsOff.png">
 	</a>
-	<a class="but" href="https://managore.tumblr.com/">
-	  	<img class="bottom" src="Images/gamesButtonOn.png">
-	  	<img class="top"    src="Images/gamesButtonOff.png">
+	<a class="but" href="https://www.tumblr.com/blog/monsterspree/">
+	  	<img class="bottom" src="Images/Button_PicsOn.png">
+	  	<img class="top"    src="Images/Button_PicsOff.png">
+	</a>
+	<a class="but" href="https://www.linkedin.com/in/joshua-safran-88b42a36/">
+	  	<img class="bottom" src="Images/Button_BizOn.png">
+	  	<img class="top"    src="Images/Button_BizOff.png">
 	</a>
 </div>
 
